tests/chainsaw/disallow-capabilities-strict/bad-pod-add-cap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-add-cap
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      capabilities:
        drop:
        - ALL
        add:
        - SYS_ADMIN
