tests/chainsaw/disallow-capabilities-strict/bad-pod-no-drop.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-no-drop
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
